# discord

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 20260203154827_create_users.sql
backend/src/: main.rs
frontend/: package-lock.json
