[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }

argon2 = "0.5"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
